--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "@sanity/client": "^3.4.1",
+    "@sanity/image-url": "^1.0.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
